# phylogenetic-tree-analyser

./: .gitignore  CUNI_INFO.md  README.md  pta.py  pyproject.toml
old-program-tmp/: README.md  example_run.sh
src/treechomp/: treechomp.py
src/treesorter/: treesorter.py
tests/: list.csv
tests/few/: Takayama-helix-ANV-34564.fasta.tre  Takayama-helix-ANV-35072.fasta.tre  Takayama-helix-ANV-35266.fasta.tre  Takayama-helix-ANV-35283.fasta.tre  Takayama-helix-ANV-35453.fasta.tre  Takayama-helix-ANV-35645.fasta.tre  Takayama-helix-ANV-35718.fasta.tre  Takayama-helix-ANV-35740.fasta.tre  Takayama-helix-ANV-35803.fasta.tre  Takayama-helix-ANV-35860.fasta.tre
tests/known_results/: verbal_test_description.txt
tests/known_results/newick/: euglenids.tre  kareniacea.tre  rhodophytes.tre
tests/known_results/nexus/: euglenids.tre  kareniacea.tre  rhodophytes.tre
