[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "treesorter_package"
version = "0.2.1"
authors = [
  { name="Adél Vancl", email="adel@vancl.me" },
]
# TODO description
description = "Multiple phylogenetic tree (fasta.tre) files analyzer according to provided criteria to find highest valid bootstrap value"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vanclcode/treesorter"
"Bug Tracker" = "https://github.com/vanclcode/treesorter/issues"